Fixed min width of calculator so it doesnt get squished on small windows

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     display: flex;
     flex: .7 1 auto;
     width: 1em;
+    min-width: 20em;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
